flux/infrastructure/identity/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: identity
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 1000
#        fsGroup: 1000
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0
        args:
        - start
        - --http-relative-path=/
        - --spi-theme-static-max-age=-1
        - --spi-theme-reload=true
        resources:
          limits:
            cpu: 600m
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 1Gi
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9000
          name: health
        startupProbe:
          httpGet:
            path: /health/ready
            port: 9000
          failureThreshold: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 30
        volumeMounts:
        - name: keycloak-themes
          mountPath: /opt/keycloak/themes/beckcloud
          readOnly: true
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: keycloak-theme-volume
        secret:
          secretName: beckcloud-keycloak-theme-tar
      - name: keycloak-themes
        emptyDir: {}
