flux/infrastructure/identity/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: identity
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io.cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - keycloak.becklab.cloud
    secretName: keycloak-tls
  rules:
  - host: keycloak.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
